k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-mysql
  labels:
    k8s-app: mysql
spec:
  minReadySeconds: 10
  strategy:
    type: Recreate
    # type: RollingUpdate
    # rollingUpdate:
    #   maxSurge: 1
    #   maxUnavailable: 0
  selector:
    matchLabels:
      app: pod-mysql
  # replicas: 1
  template:
    metadata:
      name: pod-mysql
      labels:
        app: pod-mysql
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-wensi-sit-work2 # 当实例，只跑在work2
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-yourls
  labels:
    k8s-app: yourls
spec:
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: pod-yourls
  replicas: 3
  template:
    metadata:
      name: pod-yourls
      labels:
        app: pod-yourls
    spec:
      containers:
      - name: yourls
        image: climbing/yourls:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: pod-mysql
  clusterIP: None
---
  apiVersion: v1
  kind: Service
  metadata:
    name: svc-yourls
  spec:
    type: ClusterIP
    selector:
      app: pod-yourls
    # service路由到deploy部署的pod的时候，使用clientIP来保证每次同一个clientip都路由到相同的pod
    # 但是这个在multipass的环境下没有效，因为如果在multipass的宿主机访问service的时候，到达所有pod的clientIp都是一样
    sessionAffinity: ClientIP
    ports:
      - name: http
        protocol: TCP
        port: 9376
        targetPort: 80
        # 默认情况下，为了方便起见，Kubernetes 控制平面会从某个范围内分配一个端口号（默认：30000-32767）
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-yourls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # 为了解决上面service的sessionAffinity失效的情况，可以用ingress-nginx的affinity来完成
    # 一下配置会在给请求返回一个Set-Cookie的header，设置一个cookie给客户端（如浏览器），之后用这个cookie来做路由，保持同一个会话到达同一个pod
    # 参考： https://kubernetes.github.io/ingress-nginx/examples/affinity/cookie/
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: yourls.k3s.master
    http:
      paths:
      - path: /
        # pathType: Prefix
        backend:
          serviceName: svc-yourls
          servicePort: 9376
